[gd_scene load_steps=2 format=3 uid="uid://by2cjl1u4adxh"]

[ext_resource type="Script" path="res://login_screen.gd" id="1_wobmj"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wobmj")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
placeholder_text = "USERNAME"
alignment = 1
caret_blink = true

[node name="LoginButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LOGIN"

[connection signal="text_submitted" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/MarginContainer/UsernameInput" to="." method="_on_username_input_text_submitted"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/GridContainer/LoginButton" to="." method="_on_login_button_pressed"]
